<resources>
    <string name="app_name">Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="home_second">Home Second</string>
    <string name="restaurants_list">Available Restaurants</string>


    <string name="restaurant_sample_title">Restaurant sample title</string>
    <string name="restaurant_sample_description">Restaurant sample description text goes here.</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="strava_sample_description">Strava Sample Description</string>
    <string name="strava_sample_title">Strava sample Title</string>
    <string name="open_menu">Open Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_menu">Menu</string>
    <string name="list_of_menu_items">Menu Items</string>
    <string name="menucategoryitem_sample_title">Menu Sample Title</string>
    <string name="menucategoryitem_sample_description">Menu category sample description</string>
    <string name="open">Open</string>
    <string name="user_account">Account</string>
    <string name="firebase_login">Log in with Google</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="welcome_signin_signup">Welcome, please sign in or sign up with Google</string>
    <string name="logout">Log out</string>
    <string name="additional_items_list">Additional Items list</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="error_signing_in">Error signing in</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="test_message">Test messagea aaaaaaaaaaaa</string>
    <string name="remove_from_cart">Remove</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>


</resources>
