<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mkkabi.restaurant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mkkabi.restaurant.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mkkabi.restaurant.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_restaurants"
        android:name="com.mkkabi.restaurant.ui.restaurants.RestaurantsListFragment"
        android:label="@string/restaurants_list"
        tools:layout="@layout/fragment_restaurants_list" >
        <action
            android:id="@+id/action_nav_restaurants_to_nav_restaurant_menu"
            app:destination="@id/nav_restaurant_menu"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@android:anim/slide_out_right">
            <argument
                android:name="restaurant_id"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_restaurant_menu"
        android:name="com.mkkabi.restaurant.ui.restaurants.MenuCategoriesListFragment"
        android:label="@string/restaurant_menu"
        tools:layout="@layout/fragment_restaurant_menu" >
        <argument
            android:name="restaurant_id"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_restaurant_menu_to_nav_strava_list"
            app:destination="@id/nav_strava_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_strava_list"
        android:name="com.mkkabi.restaurant.ui.restaurants.StravaListFragment"
        android:label="@string/list_of_menu_items"
        tools:layout="@layout/fragment_dishes_list" />

    <fragment
        android:id="@+id/nav_account_login"
        android:name="com.mkkabi.restaurant.ui.account.AccountLoginFragment"
        android:label="@string/user_account"
        tools:layout="@layout/fragment_account_login" />

    <fragment
        android:id="@+id/nav_user_account"
        android:name="com.mkkabi.restaurant.ui.account.UserAccountFragment"
        android:label="@string/user_account"
        tools:layout="@layout/fragment_user_account" >
        <action
            android:id="@+id/action_nav_user_account_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>