<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_view_margin_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewStrava"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/samplehamburger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_strava_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/strava_sample_title"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView_currencyDishPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dish_price_left_margin"
                        android:layout_weight="0"
                        android:text="₴"
                        android:textColor="@color/dish_price_color"
                        android:textSize="@dimen/dish_price_size" />

                    <TextView
                        android:id="@+id/textView_dishPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="0.00"
                        android:textColor="@color/dish_price_color"
                        android:textSize="@dimen/dish_price_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_strava_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strava_sample_description"
                    android:textColor="#555" />

                <LinearLayout
                    android:id="@+id/linearLayoutAdditionalItemsOpener"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView_arrow"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

                    <TextView
                        android:id="@+id/textView_additionalItemsTextHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:clickable="true"
                        android:text="@string/additional_items_list"
                        android:textColor="@color/link_color" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_additionalDishItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/empyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=" "
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_decreaseStravaNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="-"
                    android:textSize="18sp"
                    android:theme="@style/PrimaryFlatButton"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView_dishesNumberAddToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="1"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_increaseStravaNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="+"
                    android:textSize="18sp"
                    android:theme="@style/PrimaryFlatButton"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_removeFromCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_from_cart"
                    android:theme="@style/PrimaryFlatButton" />
                <!--                <Button-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="some text"-->
                <!--                    android:theme="@style/PrimaryFlatButton" />-->
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>